Prevent stars from overlapping text

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -75,7 +75,6 @@ nav {
   }
 }
 
-
 .full-width {
   width: 100vw;
   position: relative;
@@ -106,60 +105,8 @@ nav {
   bottom: 40px;
 }
 
-.scramble {
-  font: inherit;
-}
-
-.dud {
-  color: #757575;
-}
-
-.title {
-  position: relative;
-  margin-top: 0;
-  padding-top: 2.8rem;
-  font-family: 'Satisfy', cursive, sans-serif;
-  font-size: 9em;
-  color: #AB9120;
-  margin-bottom: 60px;
-  z-index: 1;
-}
-
-.scene {
-  background-color: #2b2b2b;
-  line-height: 0;
-}
-
-div[class*="white-star-image"] {
-  content: url("../images/white_star.png");
-  position: absolute;
-  height: 4px;
-  z-index: 0;
-}
-
-div[class*="gold-star-image"] {
-  content: url("../images/gold_star.png");
-  position: absolute;
-  height: 12px;
-  z-index: 0;
-}
-
-div[class*="teal-star-image"] {
-  content: url("../images/teal_star.png");
-  position: absolute;
-  height: 20px;
-  z-index: 0;
-}
-
-.mountain-image {
-  position: relative;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 900px;
-  max-width: 100%;
-  bottom: 0;
-  z-index: 1;
+.home-title {
+  margin-bottom: 100px;
 }
 
 .home-content {
@@ -204,6 +151,53 @@ div[class*="teal-star-image"] {
   }
 }
 
+.title {
+  position: relative;
+  margin-top: 0;
+  padding-top: 2.8rem;
+  font-family: 'Satisfy', cursive, sans-serif;
+  font-size: 9em;
+  color: #AB9120;
+  margin-bottom: 60px;
+  z-index: 1;
+}
+
+.scene {
+  background-color: #2b2b2b;
+  line-height: 0;
+}
+
+.white-star-image {
+  content: url("../images/white_star.png");
+  position: absolute;
+  height: 4px;
+  z-index: 0;
+}
+
+.gold-star-image {
+  content: url("../images/gold_star.png");
+  position: absolute;
+  height: 8px;
+  z-index: 0;
+}
+
+.teal-star-image {
+  content: url("../images/teal_star.png");
+  position: absolute;
+  height: 15px;
+  z-index: 0;
+}
+
+.mountain-image {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  max-width: 100%;
+  bottom: 0;
+  z-index: 1;
+}
 
 @keyframes particleAnimation
 {
